@@ -2,6 +2,35 @@
 
 > **📦 本文以及示例源码已归档在 [javacore](https://github.com/dunwu/javacore/)**
 
+<!-- TOC depthFrom:2 depthTo:3 -->
+
+- [一、内存简介](#一内存简介)
+  - [物理内存和虚拟内存](#物理内存和虚拟内存)
+  - [内核空间和用户空间](#内核空间和用户空间)
+  - [使用内存的 Java 组件](#使用内存的-java-组件)
+- [二、运行时数据区域](#二运行时数据区域)
+  - [程序计数器](#程序计数器)
+  - [Java 虚拟机栈](#java-虚拟机栈)
+  - [本地方法栈](#本地方法栈)
+  - [Java 堆](#java-堆)
+  - [方法区](#方法区)
+  - [运行时常量池](#运行时常量池)
+  - [直接内存](#直接内存)
+  - [Java 内存区域对比](#java-内存区域对比)
+- [三、JVM 运行原理](#三jvm-运行原理)
+- [四、OutOfMemoryError](#四outofmemoryerror)
+  - [什么是 OutOfMemoryError](#什么是-outofmemoryerror)
+  - [堆空间溢出](#堆空间溢出)
+  - [GC 开销超过限制](#gc-开销超过限制)
+  - [永久代空间不足](#永久代空间不足)
+  - [元数据区空间不足](#元数据区空间不足)
+  - [无法新建本地线程](#无法新建本地线程)
+  - [直接内存溢出](#直接内存溢出)
+- [五、StackOverflowError](#五stackoverflowerror)
+- [参考资料](#参考资料)
+
+<!-- /TOC -->
+
 ## 一、内存简介
 
 ### 物理内存和虚拟内存
@@ -28,13 +57,13 @@ Java 启动后，作为一个进程运行在操作系统中。
 
 JVM 在执行 Java 程序的过程中会把它所管理的内存划分为若干个不同的数据区域。这些区域都有各自的用途，以及创建和销毁的时间，有的区域随着虚拟机进程的启动而存在，有些区域则依赖用户线程的启动和结束而建立和销毁。如下图所示：
 
-![img](http://dunwu.test.upcdn.net/cs/java/javacore/jvm/jvm-memory-runtime-data-area.png!zp)
+![img](http://dunwu.test.upcdn.net/cs/java/javacore/jvm/jvm-memory-runtime-data-area.png)
 
 ### 程序计数器
 
-**`程序计数器（Program Counter Register）`** 是一块较小的内存空间，它可以看做是**当前线程所执行的字节码的行号指示器**。
+**`程序计数器（Program Counter Register）`** 是一块较小的内存空间，它可以看做是**当前线程所执行的字节码的行号指示器**。例如，分支、循环、跳转、异常、线程恢复等都依赖于计数器。
 
-为了线程切换后能恢复到正确的执行位置，每条线程都需要一个独立的程序计数器，各条线程间的计数器互不影响，独立存储，我们称这类内存区域为 “线程私有” 的内存。
+当执行的线程数量超过 CPU 数量时，线程之间会根据时间片轮询争夺 CPU 资源。如果一个线程的时间片用完了，或者是其它原因导致这个线程的 CPU 资源被提前抢夺，那么这个退出的线程就需要单独的一个程序计数器，来记录下一条运行的指令，从而在线程切换后能恢复到正确的执行位置。各条线程间的计数器互不影响，独立存储，我们称这类内存区域为 “线程私有” 的内存。
 
 - 如果线程正在执行的是一个 Java 方法，这个计数器记录的是正在执行的虚拟机字节码指令的地址；
 - 如果正在执行的是 Native 方法，这个计数器值则为空（Undefined）。
@@ -48,6 +77,11 @@ JVM 在执行 Java 程序的过程中会把它所管理的内存划分为若干�
 每个 Java 方法在执行的同时都会创建一个栈帧（Stack Frame）用于存储 **局部变量表**、**操作数栈**、**常量池引用** 等信息。每一个方法从调用直至执行完成的过程，就对应着一个栈帧在 Java 虚拟机栈中入栈和出栈的过程。
 
 ![img](http://dunwu.test.upcdn.net/cs/java/javacore/jvm/jvm-stack.png!w640)
+
+- **局部变量表** - 32 位变量槽，存放了编译期可知的各种基本数据类型、对象引用、`ReturnAddress` 类型。
+- **操作数栈** - 基于栈的执行引擎，虚拟机把操作数栈作为它的工作区，大多数指令都要从这里弹出数据、执行运算，然后把结果压回操作数栈。
+- **动态链接** - 每个栈帧都包含一个指向运行时常量池（方法区的一部分）中该栈帧所属方法的引用。持有这个引用是为了支持方法调用过程中的动态连接。Class 文件的常量池中有大量的符号引用，字节码中的方法调用指令就以常量池中指向方法的符号引用为参数。这些符号引用一部分会在类加载阶段或第一次使用的时候转化为直接引用，这种转化称为静态解析。另一部分将在每一次的运行期间转化为直接应用，这部分称为动态链接。
+- **方法出口** - 返回方法被调用的位置，恢复上层方法的局部变量和操作数栈，如果无返回值，则把它压入调用者的操作数栈。
 
 > 🔔 注意：
 >
@@ -68,7 +102,7 @@ JVM 在执行 Java 程序的过程中会把它所管理的内存划分为若干�
 
 **`本地方法栈（Native Method Stack）`** 与虚拟机栈的作用相似。
 
-二者的区别在于：**虚拟机栈为 Java 方法服务；本地方法栈为 Native 方法服务**。
+二者的区别在于：**虚拟机栈为 Java 方法服务；本地方法栈为 Native 方法服务**。本地方法并不是用 Java 实现的，而是由 C 语言实现的。
 
 ![img](http://dunwu.test.upcdn.net/cs/java/javacore/jvm/jvm-native-method-stack.gif!w640)
 
@@ -83,7 +117,7 @@ Java 堆是垃圾收集的主要区域（因此也被叫做"GC 堆"）。现代�
 因此虚拟机把 Java 堆分成以下三块：
 
 - **`新生代（Young Generation）`**
-  - `Eden`
+  - `Eden` - Eden 和 Survivor 的比例为 8:1
   - `From Survivor`
   - `To Survivor`
 - **`老年代（Old Generation）`**
@@ -103,17 +137,24 @@ Java 堆是垃圾收集的主要区域（因此也被叫做"GC 堆"）。现代�
 
 ### 方法区
 
-**`方法区（Method Area）` 用于存放已被加载的类信息、常量、静态变量、即时编译器编译后的代码等数据**。
+方法区（Method Area）也被称为永久代。**方法区用于存放已被加载的类信息、常量、静态变量、即时编译器编译后的代码等数据**。
 
 对这块区域进行垃圾回收的主要目标是对常量池的回收和对类的卸载，但是一般比较难实现。
 
 > 🔔 注意：和 Java 堆一样不需要连续的内存，并且可以动态扩展，动态扩展失败一样会抛出 `OutOfMemoryError` 异常。
 >
-> 💡 提示：JDK 1.7 之前，HotSpot 虚拟机把它当成永久代来进行垃圾回收，JDK 1.8 之后，取消了永久代，用 **`metaspace（元数据）`**区替代。
+> 💡 提示：
+>
+> - JDK 1.7 之前，HotSpot 虚拟机把它当成永久代来进行垃圾回收。可通过参数 `-XX:PermSize` 和 `-XX:MaxPermSize` 设置。
+> - JDK 1.8 之后，取消了永久代，用 **`metaspace（元数据）`**区替代。可通过参数 `-XX:MaxMetaspaceSize` 设置。
 
 ### 运行时常量池
 
 **`运行时常量池（Runtime Constant Pool）` 是方法区的一部分**，Class 文件中除了有类的版本、字段、方法、接口等描述信息，还有一项信息是常量池（Constant Pool Table），**用于存放编译器生成的各种字面量和符号引用**，这部分内容会在类加载后被放入这个区域。
+
+- **字面量** - 文本字符串、声明为 `final` 的常量值等。
+- **符号引用** - 类和接口的完全限定名（Fully Qualified Name）、字段的名称和描述符（Descriptor）、方法的名称和描述符。
+
 
 除了在编译期生成的常量，还允许动态生成，例如 `String` 类的 `intern()`。这部分常量也会被放入运行时常量池。
 
@@ -141,13 +182,105 @@ Java 堆是垃圾收集的主要区域（因此也被叫做"GC 堆"）。现代�
 | 运行时常量池  | 线程共享       | `OutOfMemoryError`                         |
 | 直接内存      | 非运行时数据区 | `OutOfMemoryError`                         |
 
-## 三、OutOfMemoryError
+## 三、JVM 运行原理
+
+```java
+public class JVMCase {
+ 
+	// 常量
+	public final static String MAN_SEX_TYPE = "man";
+ 
+	// 静态变量
+	public static String WOMAN_SEX_TYPE = "woman";
+ 
+	public static void main(String[] args) {
+		
+		Student stu = new Student();
+		stu.setName("nick");
+		stu.setSexType(MAN_SEX_TYPE);
+		stu.setAge(20);
+		
+		JVMCase jvmcase = new JVMCase();
+		
+		// 调用静态方法
+		print(stu);
+		// 调用非静态方法
+		jvmcase.sayHello(stu);
+	}
+ 
+ 
+	// 常规静态方法
+	public static void print(Student stu) {
+		System.out.println("name: " + stu.getName() + "; sex:" + stu.getSexType() + "; age:" + stu.getAge()); 
+	}
+ 
+ 
+	// 非静态方法
+	public void sayHello(Student stu) {
+		System.out.println(stu.getName() + "say: hello"); 
+	}
+}
+ 
+class Student{
+	String name;
+	String sexType;
+	int age;
+	
+	public String getName() {
+		return name;
+	}
+	public void setName(String name) {
+		this.name = name;
+	}
+	
+	public String getSexType() {
+		return sexType;
+	}
+	public void setSexType(String sexType) {
+		this.sexType = sexType;
+	}
+	public int getAge() {
+		return age;
+	}
+	public void setAge(int age) {
+		this.age = age;
+	}
+}
+```
+
+运行以上代码时，JVM 处理过程如下：
+
+（1）JVM 向操作系统申请内存，JVM 第一步就是通过配置参数或者默认配置参数向操作系统申请内存空间，根据内存大小找到具体的内存分配表，然后把内存段的起始地址和终止地址分配给 JVM，接下来 JVM 就进行内部分配。
+
+（2）JVM 获得内存空间后，会根据配置参数分配堆、栈以及方法区的内存大小。
+
+（3）class 文件加载、验证、准备以及解析，其中准备阶段会为类的静态变量分配内存，初始化为系统的初始值（这部分我在第 21 讲还会详细介绍）。
+
+![img](http://dunwu.test.upcdn.net/snap/20200630094250.png)
+
+（4）完成上一个步骤后，将会进行最后一个初始化阶段。在这个阶段中，JVM 首先会执行构造器 `<clinit>` 方法，编译器会在 `.java` 文件被编译成 `.class` 文件时，收集所有类的初始化代码，包括静态变量赋值语句、静态代码块、静态方法，收集在一起成为 `<clinit>()` 方法。
+
+![img](http://dunwu.test.upcdn.net/snap/20200630094329.png)
+
+（5）执行方法。启动 main 线程，执行 main 方法，开始执行第一行代码。此时堆内存中会创建一个 student 对象，对象引用 student 就存放在栈中。
+
+![img](http://dunwu.test.upcdn.net/snap/20200630094651.png)
+
+（6）此时再次创建一个 JVMCase 对象，调用 sayHello 非静态方法，sayHello 方法属于对象 JVMCase，此时 sayHello 方法入栈，并通过栈中的 student 引用调用堆中的 Student 对象；之后，调用静态方法 print，print 静态方法属于 JVMCase 类，是从静态方法中获取，之后放入到栈中，也是通过 student 引用调用堆中的 student 对象。
+
+![img](http://dunwu.test.upcdn.net/snap/20200630094714.png)
+
+## 四、OutOfMemoryError
+
+### 什么是 OutOfMemoryError
+
+`OutOfMemoryError` 简称为 OOM。Java 中对 OOM 的解释是，没有空闲内存，并且垃圾收集器也无法提供更多内存。通俗的解释是：JVM 内存不足了。
 
 在 JVM 规范中，**除了程序计数器区域外，其他运行时区域都可能发生 `OutOfMemoryError` 异常（简称 OOM）**。
 
 下面逐一介绍 OOM 发生场景。
 
-### Java heap space
+### 堆空间溢出
 
 `java.lang.OutOfMemoryError: Java heap space` 这个错误意味着：**堆空间溢出**。
 
@@ -245,7 +378,7 @@ public class HeapOutOfMemoryDemo {
 
 但如果在现实中，代码并没有问题，仅仅是因为堆内存不足，可以通过 `-Xms` 和 `-Xmx` 适当调整堆内存大小。
 
-### GC overhead limit exceeded
+### GC 开销超过限制
 
 `java.lang.OutOfMemoryError: GC overhead limit exceeded` 这个错误，官方给出的定义是：**超过 `98%` 的时间用来做 GC 并且回收了不到 `2%` 的堆内存时会抛出此异常**。这意味着，发生在 GC 占用大量时间为释放很小空间的时候发生的，是一种保护机制。导致异常的原因：一般是因为堆太小，没有足够的内存。
 
@@ -276,7 +409,7 @@ public class GcOverheadLimitExceededDemo {
 
 与 **Java heap space** 错误处理方法类似，先判断是否存在内存泄漏。如果有，则修正代码；如果没有，则通过 `-Xms` 和 `-Xmx` 适当调整堆内存大小。
 
-### PermGen space
+### 永久代空间不足
 
 【错误】
 
@@ -286,9 +419,9 @@ java.lang.OutOfMemoryError: PermGen space
 
 【原因】
 
-Perm （永久代）空间主要用于存放 Class 和 Meta 信息，包括类的名称和字段，带有方法字节码的方法，常量池信息，与类关联的对象数组和类型数组以及即时编译器优化。GC 在主程序运行期间不会对永久代空间进行清理，默认是 64M 大小。
+Perm （永久代）空间主要用于存放 `Class` 和 Meta 信息，包括类的名称和字段，带有方法字节码的方法，常量池信息，与类关联的对象数组和类型数组以及即时编译器优化。GC 在主程序运行期间不会对永久代空间进行清理，默认是 64M 大小。
 
-根据上面的定义，可以得出 PermGen 大小要求取决于加载的类的数量以及此类声明的大小。因此，可以说造成该错误的主要原因是永久代中装入了太多的类或太大的类。
+根据上面的定义，可以得出 **PermGen 大小要求取决于加载的类的数量以及此类声明的大小**。因此，可以说造成该错误的主要原因是永久代中装入了太多的类或太大的类。
 
 在 JDK8 之前的版本中，可以通过 `-XX:PermSize` 和 `-XX:MaxPermSize` 设置永久代空间大小，从而限制方法区大小，并间接限制其中常量池的容量。
 
@@ -341,9 +474,9 @@ public class PermOutOfMemoryErrorDemo {
 
 而且该 java.lang.ClassLoader 实例仍引用应用程序的所有类，通常在 PermGen 中占据数十兆字节。这意味着只需少量重新部署即可填充通常大小的 PermGen。
 
-#### Permgen space 解决方案
+#### PermGen space 解决方案
 
-（1）解决初始化时的 OutOfMemoryError
+（1）解决初始化时的 `OutOfMemoryError`
 
 在应用程序启动期间触发由于 PermGen 耗尽导致的 `OutOfMemoryError` 时，解决方案很简单。该应用程序仅需要更多空间才能将所有类加载到 PermGen 区域，因此我们只需要增加其大小即可。为此，更改你的应用程序启动配置并添加（或增加，如果存在）`-XX:MaxPermSize` 参数，类似于以下示例：
 
@@ -357,7 +490,7 @@ java -XX:MaxPermSize=512m com.yourcompany.YourClass
 
 🔔 注意：`-XX:PermSize` 一般设为 64M
 
-（2）解决重新部署时的 OutOfMemoryError
+（2）解决重新部署时的 `OutOfMemoryError`
 
 重新部署应用程序后立即发生 OutOfMemoryError 时，应用程序会遭受类加载器泄漏的困扰。在这种情况下，解决问题的最简单，继续进行堆转储分析–使用类似于以下命令的重新部署后进行堆转储：
 
@@ -369,7 +502,7 @@ jmap -dump:format=b,file=dump.hprof <process-id>
 
 对于非活动类加载器，你需要通过从非活动类加载器收集到 GC 根的最短路径来确定阻止它们被垃圾收集的引用。有了此信息，你将找到根本原因。如果根本原因是在第三方库中，则可以进入 Google/StackOverflow 查看是否是已知问题以获取补丁/解决方法。
 
-（3）解决运行时 OutOfMemoryError
+（3）解决运行时 `OutOfMemoryError`
 
 第一步是检查是否允许 GC 从 PermGen 卸载类。在这方面，标准的 JVM 相当保守-类是天生的。因此，一旦加载，即使没有代码在使用它们，类也会保留在内存中。当应用程序动态创建许多类并且长时间不需要生成的类时，这可能会成为问题。在这种情况下，允许 JVM 卸载类定义可能会有所帮助。这可以通过在启动脚本中仅添加一个配置参数来实现：
 
@@ -393,7 +526,7 @@ jmap -dump:file=dump.hprof,format=b <process-id>
 
 然后，对于每个可疑者，就需要你手动将根本原因追溯到生成此类的应用程序代码。
 
-### Metaspace
+### 元数据区空间不足
 
 【错误】
 
@@ -401,7 +534,11 @@ jmap -dump:file=dump.hprof,format=b <process-id>
 Exception in thread "main" java.lang.OutOfMemoryError: Metaspace
 ```
 
-【原因】**元数据区的内存不足，即方法区和运行时常量池的空间不足**。
+【原因】
+
+Java8 以后，JVM 内存空间发生了很大的变化。取消了永久代，转而变为元数据区。
+
+**元数据区的内存不足，即方法区和运行时常量池的空间不足**。
 
 方法区用于存放 Class 的相关信息，如类名、访问修饰符、常量池、字段描述、方法描述等。
 
@@ -434,7 +571,7 @@ public class MethodAreaOutOfMemoryDemo {
 
 【解决】
 
-当由于元空间而面临 OutOfMemoryError 时，第一个解决方案应该是显而易见的。如果应用程序耗尽了内存中的 Metaspace 区域，则应增加 Metaspace 的大小。更改应用程序启动配置并增加以下内容：
+当由于元空间而面临 `OutOfMemoryError` 时，第一个解决方案应该是显而易见的。如果应用程序耗尽了内存中的 Metaspace 区域，则应增加 Metaspace 的大小。更改应用程序启动配置并增加以下内容：
 
 ```
 -XX:MaxMetaspaceSize=512m
@@ -444,7 +581,7 @@ public class MethodAreaOutOfMemoryDemo {
 
 另一种解决方案甚至更简单。你可以通过删除此参数来完全解除对 Metaspace 大小的限制，JVM 默认对 Metaspace 的大小没有限制。但是请注意以下事实：这样做可能会导致大量交换或达到本机物理内存而分配失败。
 
-### Unable to create new native thread
+### 无法新建本地线程
 
 `java.lang.OutOfMemoryError: Unable to create new native thread` 这个错误意味着：**Java 应用程序已达到其可以启动线程数的限制**。
 
@@ -501,14 +638,14 @@ public class UnableCreateNativeThreadErrorDemo {
 
 可以通过增加操作系统级别的限制来绕过无法创建新的本机线程问题。例如，如果限制了 JVM 可在用户空间中产生的进程数，则应检查出并可能增加该限制：
 
-```
+```shell
 [root@dev ~]# ulimit -a
 core file size          (blocks, -c) 0
 --- cut for brevity ---
 max user processes              (-u) 1800
 ```
 
-通常，OutOfMemoryError 对新的本机线程的限制表示编程错误。当应用程序产生数千个线程时，很可能出了一些问题—很少有应用程序可以从如此大量的线程中受益。
+通常，`OutOfMemoryError` 对新的本机线程的限制表示编程错误。当应用程序产生数千个线程时，很可能出了一些问题—很少有应用程序可以从如此大量的线程中受益。
 
 解决问题的一种方法是开始进行线程转储以了解情况。
 
@@ -516,7 +653,7 @@ max user processes              (-u) 1800
 
 由直接内存导致的内存溢出，一个明显的特征是在 Head Dump 文件中不会看见明显的异常，如果发现 OOM 之后 Dump 文件很小，而程序中又直接或间接使用了 NIO，就可以考虑检查一下是不是这方面的原因。
 
-示例：直接内存 `OutOfMemoryError`
+【示例】直接内存 `OutOfMemoryError`
 
 ```java
 /**
@@ -540,16 +677,16 @@ public class DirectOutOfMemoryDemo {
 }
 ```
 
-## 四、StackOverflowError
+## 五、StackOverflowError
 
 对于 HotSpot 虚拟机来说，栈容量只由 `-Xss` 参数来决定如果线程请求的栈深度大于虚拟机所允许的最大深度，将抛出 `StackOverflowError` 异常。
 
 从实战来说，栈溢出的常见原因：
 
-- 递归函数调用层数太深
-- 大量循环或死循环
+- **递归函数调用层数太深**
+- **大量循环或死循环**
 
-示例：递归函数调用层数太深导致 `StackOverflowError`
+【示例】递归函数调用层数太深导致 `StackOverflowError`
 
 ```java
 public class StackOverflowDemo {
@@ -577,6 +714,8 @@ public class StackOverflowDemo {
 ## 参考资料
 
 - [《深入理解 Java 虚拟机》](https://item.jd.com/11252778.html)
+- [Java 性能调优实战](https://time.geekbang.org/column/intro/100028001)
 - [从表到里学习 JVM 实现](https://www.douban.com/doulist/2545443/)
 - [作为测试你应该知道的 JAVA OOM 及定位分析](https://www.jianshu.com/p/28935cbfbae0)
 - [异常、堆内存溢出、OOM 的几种情况](https://blog.csdn.net/sinat_29912455/article/details/51125748)
+- [介绍 JVM 中 OOM 的 8 种类型](https://tianmingxing.com/2019/11/17/%E4%BB%8B%E7%BB%8DJVM%E4%B8%ADOOM%E7%9A%848%E7%A7%8D%E7%B1%BB%E5%9E%8B/)
